Show default title if Item's title is empty #32

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
         comment: Comment
       item:
         title: Title
+        title_empty: No title
   controllers:
     attachments:
       create:
