--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -32,6 +32,7 @@ ja:
         comment: コメント
       item:
         title: タイトル
+        title_empty: 無題
   controllers:
     attachments:
       create:
